# django_sample

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  メモ.md
.devcontainer/: devcontainer.json
.github/workflows/: mypy_check.yml  py_actions.yml  ruff_check.yml
blog/: admin.py  logging_config.py  models.py  serializers.py  tests.py  views.py
blog/fixtures/: dummy_data.json
blog/migrations/: 0001_initial.py  0002_alter_articletag_options_alter_jobarticle_options_and_more.py
django_sample/: asgi.py  settings.py  urls.py  wsgi.py
