[tool.poetry]
name = "django_sample"
version = "0.1.0"
description = "test"
authors = ["author"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
django = "~=4.2"
psycopg2-binary = "~=2.9.9"
django-shortuuidfield = "~=0.1.3"
djangorestframework = "~=3.14.0"
pygments = "==2.16.1"
ruff = "^0.1.7"

